added modal for tennants and occupants

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -37,3 +37,11 @@
 .template {
     display: none;
 }
+
+.pagination-cont {
+    text-align: center;
+}
+
+.tennants-container {
+    display: none;
+}
