--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,8 +1,20 @@
 .header {
-    padding-top: 10px;
+    padding-top: 30px;
     width: 90%;
     position: relative;
     left: 5%;
+}
+
+.head-cont {
+    width: 100%;
+}
+
+.head-left {
+    color:#FFF;
+}
+
+.head-right {
+
 }
 
 .header-text {
@@ -19,10 +31,15 @@
     width: 100%;
 }
 
+.login-button:hover {
+    background-color: rgba(0, 0, 0, .2);
+}
+
 .login-button > span {
     position: relative;
     display: block;
     text-align: center;
+    color: #FFF;
 }
 
 .signup-button {
