--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,8 +2,19 @@ img {
     max-height: 75px;
 }
 
-body {
+.bgImage {
+    width: 100%;
+    max-height: 1000000px;
+    height: auto;
+    position: absolute;
+    z-index: -2;
+    opacity: .1;
+}
+
+.special_body {
     word-wrap: break-word;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .header {
